--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -3,7 +3,7 @@
 \addchap{\acronymsPhrase}
 
 \begin{acronym}[YTMMM]
-\setlength{\itemsep}{-\parsep}
+\setlength{\itemsep}{8pt}
 
 \acro{AGPL}{Affero GNU General Public License}
 
