--- a/ads/cover.tex
+++ b/ads/cover.tex
@@ -2,7 +2,7 @@
 
 \begin{titlepage}
 	\begin{longtable}{p{8cm} p{8cm}}
-		\raggedright {\raisebox{\ht\strutbox-\totalheight}{\includegraphics[height=2.5cm]{images/cover/logo-dhbw.pdf}}} &
+		\raggedright {\raisebox{\ht\strutbox-\totalheight}{\includegraphics[height=2.5cm]{images/cover/logo-tha.pdf}}} &
 		% no company logo for semester paper and special documents
 		\ifDocType{T2\_3100}{}{%
 			\ifSpecialDocument{}{%
